@@ -1,3 +1,7 @@
+2004-12-05  John Luke  <john.luke@gmail.com>
+
+	* en/Gtk/Expander.xml: doc it
+
 2004-12-03  Dan Winship  <danw@novell.com>
 
 	* en/Gtk/TextBuffer.xml: 
